tests/should-fail/syntax/ff-mac.j
function x takes nothing returns nothingendfunction// i don't know if these will survive git, especially on different OSs// but this file ought to have 'mac' newlines aka. 0x0d// You can get these in Vim by doing `:set ff=mac` and saving the file.// Also this comment has to be below the function because otherwise the comment// would "eat" the function definition, because we don't end comments on \r